# stand-dll

./: .clang-format  CMakeLists.txt  LICENSE  README.md  defs.cpp  defs.def  defs.hpp  dll.cpp
